bk_ida/gccida/g0/cselib_lookup_mem
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup_mem/src/cselib.c:1215:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+34h] [rbp-1Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup_mem/src/cselib.c:1221:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| ( mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_FLOAT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup_mem/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup_mem/src/cselib.c:1222:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup_mem/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup_mem/src/cselib.c:1223:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_VECTOR_FLOAT) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup_mem/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup_mem/src/cselib.c:1242:28: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
*htab_find_slot_with_hash( hash_table_0, v4, value, INSERT) = mem_elt; 
                           ^~~~~~~~~~~~
                           hash_table
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup_mem/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_lookup_mem/src/obj/cselib.o] Error 1
